services/sample_http/k8s/testservice.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testservice
  template:
    metadata:
      labels:
        app: testservice
    spec:
      terminationGracePeriodSeconds: 120
      containers:
      - name: testservice
        image: eugenetaranov/testservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 2
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 2
        startupProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          timeoutSeconds: 1
          periodSeconds: 2
          successThreshold: 1
          failureThreshold: 2
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh","/app/hooks/pre_stop.sh"]
---
apiVersion: v1
kind: Service
metadata:
  name: testservice
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: testservice

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testservice
spec:
  rules:
  - host: testservice.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: testservice
            port:
              name: http
